tests/ui/associated-item/ambiguous-associated-type-with-generics.stderr
error[E0223]: ambiguous associated type
  --> $DIR/ambiguous-associated-type-with-generics.rs:13:13
   |
LL |     let _x: <dyn Trait<i32>>::Ty;
   |             ^^^^^^^^^^^^^^^^^^^^
   |
help: use fully-qualified syntax
   |
LL |     let _x: <dyn Trait<i32> as Assoc>::Ty;
   |                             ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0223`.
